# bob_robotics

./: .clang-format  .gitattributes  .gitignore  .gitmodules  BoBRobotics.sln  CMakeLists.txt  Doxyfile  GeNN_Robotics.sln  Jenkinsfile  README.md  build_all.sh  make-documentation.sh  robot-shopping-list.md
examples/: CMakeLists.txt  Examples.sln  README.md  build_all.sh  build_all_examples.sh
examples/PurePursuitController/: Makefile  purePursuitControllerExample.cc  simulated_ackerman.cc
examples/Simulated_ackerman_car/: simulated_ackerman.cc
examples/agent_renderer/: .gitignore  Makefile  agent_renderer.cc
examples/ant_agent/: .gitignore  CMakeLists.txt  Makefile  ant_agent  ant_agent.cc
examples/ant_tank/: .gitignore  CMakeLists.txt  ant_tank.cc
examples/ant_world/: .gitignore  CMakeLists.txt  Makefile  ant_world.cc  ant_world_test.cc
examples/ant_world_python/: .gitignore  CMakeLists.txt  ant_world_python.cc  ant_world_python.py
examples/ant_world_test/: Makefile
examples/bebop/: .gitignore  CMakeLists.txt  Makefile  bebop.cc  bebop_gps.cc  bebop_relative_move.cc  bebop_relative_move_test.cc  bebop_test.cc  bebop_video.cc  test_skip
examples/bebop_positioner/: .gitignore  Makefile  bebop_positioner.cc
examples/bebop_test/: .gitignore  Makefile
examples/bee_eye/: .gitignore  CMakeLists.txt  bee_eye.cc
examples/betaflight/: .gitignore  Makefile  betaflight_test  betaflight_test.cc  betaflight_vicon.h  redirect_net.h
examples/betaflight_spineml/: .gitignore  CMakeLists.txt  betaflight_spineml.cc  betaflight_test  betaflight_vicon.h  redirect_net.h  run_jetson.sh
examples/bn055/: CMakeLists.txt  bn055.cc
examples/camera_360/: .gitignore  CMakeLists.txt  Makefile  camera_360.cc  camera_360_test.cc
examples/camera_360_stable/: Makefile  camera_360_stable.cc
examples/camera_360_test/: camera_360_test.cc
examples/collision/: .gitignore  CMakeLists.txt  Makefile  collision  collision.cc  objects.yaml
examples/collision_detector/: .gitignore  CMakeLists.txt  collision_detector.cc  objects.yaml
examples/coordShiftTest/: CMakeLists.txt  grid  xRun.sh
examples/coord_shift/: CMakeLists.txt
examples/coord_shift_test/: CMakeLists.txt  shift  shift.cc
examples/dct_hash/: .gitignore  CMakeLists.txt  dct_hash.cc
examples/display/: .gitignore  CMakeLists.txt  Display.vcxproj  Display.vcxproj.filters  DisplayTest.vcxproj  Makefile  display.cc  display_test.cc  unwrap_display.cc  unwrap_display_test.cc
examples/display_gazebo/: CMakeLists.txt  Makefile  display_test.cc
examples/display_test/: Makefile  unwrap_display_test.cc
examples/enose/: Makefile  enose.cc
examples/gantry/: .gitignore  CMakeLists.txt  Gantry.cpp  Gantry.vcxproj  Gantry.vcxproj.filters  gantry.cc  gantry_continuous.cc  gantry_log_velocities.cc  pch.h  plot_velocities.m
examples/gazebo_differential_drive_plugin/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differential_drive.world  differential_drive_plugin.cc  run.sh  run_gazebo_differential_drive_plugin.sh  vel  vel.cc
examples/gazebo_display/: .gitignore  CMakeLists.txt  gazebo_display.cc
examples/gazebo_iris/: .gitignore  ArduCopterPlugin.hh  CMakeLists.txt  GazeboQuadCopterPlugin.hh  bob_iris  bob_iris.cc  gazebo_iris_plugin.cc  gazebo_quadcopter_plugin.cc  gazebo_quadcopter_plugin.hh  iris_arducopter_demo.world  iris_control.cc  run.sh  test_skip
examples/gazebo_omniwheel/: .gitignore  CMakeLists.txt  README.md  gazebo_omniwheel.cc  omniwheel_plugin.cc  omniwheel_robot.world  run.sh
examples/gazebo_plugin/: .gitignore  Makefile  gazebo_plugin.cc  gazebo_plugin.xml  run_gazebo_plugin.sh
examples/gazebo_rc_car/: CMakeLists.txt  gazebo_ackermann.cc  outdoor_world.world  run.sh
examples/gazebo_tank/: .gitignore  CMakeLists.txt  differential_drive.world  differential_drive.world.in  differential_drive_panoramic.world  differential_drive_plugin.cc  gazebo_panoramic_camera.yaml  gazebo_tank.cc  run.sh  run.sh.in
examples/gazebo_uav/: .gitignore  CMakeLists.txt  README.md  gazebo_quadcopter_plugin.cc  gazebo_uav.cc  iris_demo.world  iris_demo.world.in  rothamsted.world  rothamsted.world.in  run.sh  run.sh.in
examples/gps/: .gitignore  CMakeLists.txt  gps.cc  gps_example  gps_example.cc  mapviewer.ui
examples/gps_bot/: gps_bot.cc
examples/graphics/: Makefile  graphics.cc  objects.yaml
examples/grid_experiment/: grid.cc
examples/image_database/: .gitignore  CMakeLists.txt  image_database.cc  read_example.cc  write_example.cc
examples/imgui/: .gitignore  CMakeLists.txt  imgui.cc
examples/infomax/: .gitignore  CMakeLists.txt  Makefile  infomax_antworld_example.cc  infomax_example.cc  infomax_matlab_comparison.cc  infomax_route_example.cc  infomax_test.cc  read_data.h
examples/joystick/: .gitignore  CMakeLists.txt  Joystick.vcxproj  Joystick.vcxproj.filters  JoystickTest.vcxproj  Makefile  README.md  joystick.cc  joystick_omnirobot_test.cc  joystick_polling.cc  joystick_polling_test.cc  joystick_robot.cc
examples/joystick_net/: CMakeLists.txt  joystick_net_polling.cc
examples/joystick_test/: Makefile
examples/list_cameras/: CMakeLists.txt  list_cameras.cc
examples/lm9ds1/: .gitignore  CMakeLists.txt  Makefile  lm9ds1.cc  lm9ds1_test.cc
examples/lm9ds1_test/: Makefile
examples/mecanum/: .gitignore  CMakeLists.txt  mecanum.cc  mecanum_cam.cc
examples/mindstorms_imu/: .gitignore  CMakeLists.txt  mindstorms_imu.cc
examples/obstacle_avoidance/: .gitignore  Makefile  simulated_obstacle_avoidance.cc
examples/obstacle_circumnavigation/: .gitignore  CMakeLists.txt  common.h  objects.yaml  obstacle_circumnavigation.cc  (+4 more)
python/: CMakeLists.txt  build_common.py
tests/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md  bar_image.cc  bar_image.h  circstat.cc  common.h  data_path.h  dct.cc  differencers.cc  geometry.cc  gps_reader.cc  image_database.cc  infomax.cc  make_tests_include_header.sh  mask.cc  nmea_parser.cc  opencv_unwrap_360_serialisation.cc  perfect_memory.cc  roll.cc  run_tests.sh  sample_nmea.txt  string.cc  test_algo.h  tests.cc
(+8175 files in other folders)
